--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.45.0",
+    "@types/aws-lambda": "^8.10.56",
     "@types/jest": "^25.2.1",
     "@types/node": "10.17.5",
+    "aws-cdk": "1.45.0",
+    "aws-sdk": "^2.699.0",
     "jest": "^25.5.0",
     "ts-jest": "^25.3.1",
-    "aws-cdk": "1.45.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.45.0",
+    "@aws-cdk/aws-dynamodb": "^1.45.0",
+    "@aws-cdk/aws-iam": "^1.45.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.45.0",
+    "@aws-cdk/aws-lambda": "^1.45.0",
+    "@aws-cdk/aws-s3-assets": "^1.45.0",
+    "@aws-cdk/aws-s3": "^1.45.0",
     "@aws-cdk/core": "1.45.0",
     "source-map-support": "^0.5.16"
   }
